fix: proper view on mobile

--- a/style.css
+++ b/style.css
@@ -23,7 +23,8 @@ body {
 }
 
 .details {
-  width: 800px;
+  width: 100%;
+  max-width: 800px;
 }
 
 .title {
